# audiobook_rustress

./: .gitignore  .pre-commit-config.yaml  MLOps_project.txt  README.md  pyproject.toml  task.txt
configs/: config.yaml  data_preprocessing.yaml  logging.yaml  model.yaml  train.yaml
plots/: .gitkeep
raw_data/: audio.mp3.dvc  text.txt.dvc
speech_stress_analyzer/: __init__.py  commands.py  download_data.py  infer.py  models.py  preprocess.py  train.py  utils.py
