[tool.poetry]
name = "speech-stress-analyzer"
version = "0.1.0"
description = "Project for stress analysis and temporal segmentation in speech."
authors = ["Your Name <you@example.com>"] # Please update this
readme = "README.md"
packages = [{include = "speech_stress_analyzer"}]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.9,<3.12" # Ensure compatibility, adjust as needed
torch = "^2.0.0" # Or specific version for sdhubert
torchaudio = "^2.0.0" # Compatible with torch ^2.0.0
pytorch-lightning = "^2.0.0"
hydra-core = "^1.3.2"
mlflow = "^2.3.0"
dvc = {extras = ["gdrive", "s3"], version = "^3.0.0"} # Include extras for GDrive/S3 if needed, or just "dvc"
fire = "^0.5.0"
onnx = "^1.14.0"
onnxruntime = "^1.15.0"
librosa = "^0.10.0" # For robust audio loading including MP3 support
# rusyllab is not on PyPI, install from git
stressrnn = {git = "https://github.com/dbklim/StressRNN.git"}
pymorphy2 = {version = "<=0.9.2", extras = ["fast"]}
transformers = "^4.35.0" # For SdHUBERT model
datasets = "^2.14.0" # For dataset handling
scikit-learn = "^1.3.0" # For metrics
# For sdhubert and RuStress, consider git submodules or local paths if not on PyPI
# Example for a git dependency (if the repo supports it):
# sdhubert = {git = "https://github.com/cheoljun95/sdhubert.git", rev = "main"}
# rustress = {git = "https://github.com/AIshutin/rustress.git", rev = "main"}
# If using local, editable installs are an option after cloning them:
# pip install -e external/sdhubert
# pip install -e external/rustress
# These would not be listed here directly but in your setup process.

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.4.0" # For tests

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 